--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<h2>Este es un subtítulo</h2>
-<p>I am confused rn ngl.</p>
+<h1>Hola putas esta es mi página web</h1>
+<p>Y la que apriete culeras.</p>
 </body>
 </html>
