--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hola putas esta es mi página web</h1>
-<p>Y la que apriete culeras. </p>
+<h1>Hola</h1>
+<p>Apenas estoy aprendiendo desarrollo web.
+    Se vienen cositas uwu.
+</p>
 </body>
 </html>
